syntax = "proto3";

package v1.user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  string name = 1;
  int32 age = 2;
}

// Client mengirim 1 request, Server mengirim 1 response.